@@ -644,3 +644,12 @@ ul.notifications {
         color: #8a8a8a;
     }
 }
+
+// Tables
+// ------
+
+table.table-bordered > thead > tr> th.header-colspan {
+  border-bottom-width: 1px;
+}
+
+
